--- a/package.json
+++ b/package.json
@@ -5,24 +5,33 @@
   "scripts": {
     "dev": "webpack --watch --mode development",
     "build": "webpack --mode production",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "lint": "eslint src",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\""
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/chrome": "^0.0.260",
     "@types/d3": "^7.4.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/three": "^0.160.0",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
+    "@typescript-eslint/parser": "^8.53.1",
     "autoprefixer": "^10.4.17",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.9.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.0",
+    "prettier": "^3.8.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^8.53.1",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   },
